--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="/resources/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}" />
     <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
@@ -17,7 +17,6 @@
     </form>
 </div>
 
-<script src="/resources/js/bootstrap.js" type="text/javascript"></script>
-<script src="/resources/js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="/../../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
 </body>
 </html>
