--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="/../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}" />
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title>Login</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
+    <link rel="stylesheet" href="/../../static/css/login.css" th:href="@{/css/login.css}"/>
 </head>
-<body>
-<div class="container" style="align-content: center; padding-top: 10px">
-    <form action="/test" method="post">
-        <div class="form-group">
-            <input type="text" name="name"/>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-default btn-register" type="submit">Create Room</button>
-        </div>
-    </form>
-</div>
 
-<script src="/../../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+<body>
+<div class="panel">
+    <ul class="panel__menu" id="menu">
+        <hr/>
+        <li id="signIn"><a href="#">Login</a></li>
+        <li id="signUp"><a href="#">Sign up</a></li>
+    </ul>
+    <div class="panel__wrap">
+        <div class="panel__box active" id="signInBox">
+            <form action="/login" method="POST">
+                <label>Username
+                    <input name="username" type="username"/>
+                </label>
+                <label>Password
+                    <input name="password" type="password"/>
+                </label>
+                <input value="Sign In" type="submit"/>
+            </form>
+        </div>
+        <div class="panel__box" id="signUpBox">
+            <form action="/register" method="POST">
+                <label>Username
+                    <input name="username" type="username"/>
+                </label>
+                <label>Full Name
+                    <input name="fullName" type="username"/>
+                </label>
+                <label>Password
+                    <input name="password" type="password"/>
+                </label>
+                <label>Confirm password
+                    <input name="confirmPassword" type="password"/>
+                </label>
+                <input value="Register" type="submit"/>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="/../../static/js/login.js" th:src="@{/js/login.js}" type="text/javascript"></script>
 </body>
 </html>
