--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
-      <title>Spring Boot WebSocket Chat Application</title>
+      <title>Chat Application</title>
       <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
@@ -10,24 +10,29 @@
       <h2>Sorry! Your browser doesn't support Javascript</h2>
     </noscript>
 
+    <th:block sec:authorize="isAuthenticated()">
+        YES
+    </th:block>
+    <th:block sec:authorize="isAnonymous()">NO</th:block>
+
     <div id="username-page">
         <div class="username-page-container">
-            <h1 class="title">Type your username</h1>
+            <h1 class="title">Create room</h1>
             <form id="usernameForm" name="usernameForm">
                 <div class="form-group">
-                    <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                    <input type="text" id="name" placeholder="Room Name" autocomplete="off" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="accent username-submit">Start Chatting</button>
+                    <button type="submit" class="accent username-submit">Enter Room</button>
                 </div>
             </form>
         </div>
     </div>
 
-    <div id="chat-page" class="hidden">
+    <div id="chat-page"  class="hidden">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>Spring WebSocket Chat Demo</h2>
+                <h2 id="roomName"></h2>
             </div>
             <div class="connecting">
                 Connecting...
