--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -4,56 +4,34 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
       <title>Chat Application</title>
       <link rel="stylesheet" href="/css/main.css" />
+      <link rel="stylesheet" href="/../../static/ css/bootstrap.css" th:href="@{/css/bootstrap.css}" />
   </head>
   <body>
     <noscript>
       <h2>Sorry! Your browser doesn't support Javascript</h2>
     </noscript>
-
-    <th:block sec:authorize="isAuthenticated()">
-        YES
-    </th:block>
-    <th:block sec:authorize="isAnonymous()">NO</th:block>
-
-    <div id="username-page">
-        <div class="username-page-container">
-            <h1 class="title">Create room</h1>
-            <form id="usernameForm" name="usernameForm">
-                <div class="form-group">
-                    <input type="text" id="name" placeholder="Room Name" autocomplete="off" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="accent username-submit">Enter Room</button>
-                </div>
-            </form>
+    <div class="app">
+        <div class="top">
+            <div class="phrases-container">
+                <ul id="messageArea">
+                </ul>
+            </div>
+            <div class="users"></div>
+            <div class="channels"><input placeholder="search rooms"/></div>
         </div>
-    </div>
-
-    <div id="chat-page"  class="hidden">
-        <div class="chat-container">
-            <div class="chat-header">
-                <h2 id="roomName"></h2>
-            </div>
-            <div class="connecting">
-                Connecting...
-            </div>
-            <ul id="messageArea">
-
-            </ul>
+        <div class="input">
             <form id="messageForm" name="messageForm" nameForm="messageForm">
-                <div class="form-group">
-                    <div class="input-group clearfix">
-                        <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-                        <button type="submit" class="primary">Send</button>
-                    </div>
-                </div>
+                <input type="text" id="message" placeholder="Type a message..." autocomplete="off"/>
+                <button class="btn btn-success">Send</button>
             </form>
         </div>
     </div>
-    <script src="/../../static/js/jquery-3.2.1.min.js" th:src="@{/js/jquery-3.2.1.min.js}" type="text/javascript"></script>
+
+    <script src="/../../static/js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}" type="text/javascript"></script>
     <script src="/../../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
-    <script src="/../../static/js/main.js" th:src="@{/js/main.js}" type="text/javascript"></script>
     <script src="/../../static/js/sockjs.min.js" th:src="@{/js/sockjs.min.js}" type="text/javascript"></script>
     <script src="/../../static/js/stomp.min.js" th:src="@{/js/stomp.min.js}" type="text/javascript"></script>
+    <script src="/../../static/js/main.js" th:src="@{/js/main.js}" type="text/javascript"></script>
+
   </body>
 </html>
