--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -169,3 +169,10 @@ input,
     width: 100%;
     margin: 2%;
 }
+
+#createChannel {
+    padding: 2%;
+    width: 90%;
+    margin-bottom: 5px;
+    background-color: #dddddd;
+}
