--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -35,7 +35,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Available Channels</h4>
+                <form id="createChannelForm" name="createChannelForm" nameForm="createChannelForm">
+                    <input id="createChannel" type="text" placeholder="Create Channel"/>
+                </form>
+                <p class="modal-title">Available Channels</p>
             </div>
             <div class="modal-body">
             </div>
