add login and register validation, error msg

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -416,3 +416,9 @@ a {
         opacity: 0;
     }
 }
+
+.has-danger , .danger {
+    color: red;
+    font-style: italic;
+    font-size: x-small;
+}
