--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -176,3 +176,16 @@ input,
     margin-bottom: 5px;
     background-color: #dddddd;
 }
+
+li i img.img-circle {
+    display: block;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
+li span {
+    color: #178cbe;
+}
