--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,27 +17,35 @@
     </ul>
     <div class="panel__wrap">
         <div class="panel__box active" id="signInBox">
-            <form action="/login" method="POST">
-                <label>Username
-                    <input name="username" type="username"/>
+            <form action="/login" method="POST" th:object="${user}">
+                <label>Email
+                    <input name="username" type="username" th:value="*{email}" th:placeholder="*{email}"/>
                 </label>
                 <label>Password
                     <div class="form-group"
                          th:classappend="${error} != null ? 'danger'">
-                    <input name="password" type="password"/>
+                        <input name="password" type="password"/>
                         <div class="form-control-feedback" th:text="${error}"/>
                     </div>
                 </label>
-                <input value="Sign In" type="submit"/>
+                <input class="signin" value="Sign In" type="submit"/>
             </form>
+            <form action="/connect/facebook" method="post">
+                <input type="hidden" name="scope"
+                       value="public_profile, email,user_location, publish_actions, publish_pages, manage_pages"/>
+                <label>
+                    <input type="submit" id="fb" value=""/>
+                </label>
+            </form>
+            <!--<div th:replace="connect/facebookConnect"/>-->
         </div>
         <div class="panel__box" id="signUpBox">
-            <form action="/register" method="POST" th:object="${user}">
+            <form action="/register" enctype="multipart/form-data" method="POST" th:object="${user}">
                 <label>Username
                     <input name="username" type="username" th:value="*{username}" th:placeholder="*{username}"/>
                 </label>
-                <label>Full Name
-                    <input name="fullName" type="username" th:value="*{fullName}" th:placeholder="*{fullName}"/>
+                <label>Email
+                    <input name="fullName" type="username" th:value="*{email}" th:placeholder="*{email}"/>
                 </label>
                 <label>Password
                     <input name="password" type="password"/>
@@ -45,16 +53,20 @@
                 <label>Confirm password
                     <div class="form-group"
                          th:classappend="${#fields.hasErrors('global')} ? 'has-danger'">
-                    <input name="confirmPassword" type="password"/>
+                        <input name="confirmPassword" type="password"/>
                         <div class="form-control-feedback" th:each="error : ${#fields.errors('global')}"
                              th:text="${error}">
                         </div>
                     </div>
                 </label>
-                <input value="Register" type="submit"/>
+                <label>Upload Image/Avatar
+                    <input type="file" id="file" class="filestyle" data-input="false" name="file"/>
+                </label>
+                <input class="signout" value="Register" type="submit"/>
             </form>
         </div>
     </div>
+
 </div>
 <script src="/../../static/js/login.js" th:src="@{/js/login.js}" type="text/javascript"></script>
 </body>
