--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/../../static/ css/bootstrap.css" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
+<div th:replace="navbar/navbar"/>
 <noscript>
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
