--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
                     <span th:text="${error}"/>
                 </div>
                 <label>Email
-                    <input name="username" type="username" th:value="*{email}" th:placeholder="*{email}"/>
+                    <input name="email" type="username" th:value="*{email}" th:placeholder="*{email}"/>
                 </label>
                 <label>Password
                     <input name="password" type="password"/>
@@ -49,7 +49,7 @@
                     <input name="username" type="username" th:value="*{username}" th:placeholder="*{username}"/>
                 </label>
                 <label>Email
-                    <input name="fullName" type="username" th:value="*{email}" th:placeholder="*{email}"/>
+                    <input name="email" type="username" th:value="*{email}" th:placeholder="*{email}"/>
                 </label>
                 <label>Password
                     <input name="password" type="password"/>
