--- a/src/main/resources/templates/navbar/navbar.html
+++ b/src/main/resources/templates/navbar/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a target="_blank" href="#" class="navbar-brand">
+            <a href="#" class="navbar-brand">
                 <strong>Chat App</strong></a>
         </div>
         <div class="collapse navbar-collapse">
