--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,8 +34,10 @@ html {
     height: 550px;
     background: #fff;
     border: 1px solid #ccc;
-    overflow: hidden;
+    /*overflow: hidden;*/
     float: left;
+    overflow: scroll;
+    display: inline-block;
 
 }
 .app .phrases-container .phrases {
