added youtube video and image visualization

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -55,6 +55,8 @@
 <script src="/../../static/js/sockjs.min.js" th:src="@{/js/sockjs.min.js}" type="text/javascript"></script>
 <script src="/../../static/js/stomp.min.js" th:src="@{/js/stomp.min.js}" type="text/javascript"></script>
 <script src="/../../static/js/main.js" th:src="@{/js/main.js}" type="text/javascript"></script>
+<script src="/../../static/js/youtubeApi.js" th:src="@{/js/youtubeApi.js}" type="text/javascript"></script>
+
 
 </body>
 </html>
